[package]
name = "spider-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
undetected-chromedriver = "0.1.2"
tokio = { version = "1.42.0", features = ["full"] }
axum = { version = "0.8.0", features = ["macros", "ws"] }
axum-macros = { version = "0.5.0-rc.1" }
serde_json = { version = "1.0.134"  }
serde = { version = "1.0.200", features = ["derive"] }
anyhow = "1.0.95"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
axum-extra = {  version = "0.10.0", features = ["typed-header","cookie"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tokio-tungstenite = { version = "0.26.1" , features = ["rustls","native-tls"] }
native-tls = "0.2.12"
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
rayon = "1.10.0"
 
scraper = "0.22.0"
http = "1.2.0"
itertools = "0.14.0"
 
cached = { version = "0.54.0", features = ["async"] }
mongodb = { version = "3.1.1", features = ["sync"] }
base64 = "0.22.1"
playwright = "0.0.20"
surrealdb = "2.1.4"
chrono = "0.4.39"
cookie = "0.18.1"
 
 
 
 

 